[workspace]
members = [
    "crates/use-bioinformatics",
    "crates/use-sequence",
    "crates/use-residue",
    "crates/use-alphabet",
    "crates/use-nucleotide",
    "crates/use-amino-acid",
    "crates/use-genomic-range",
    "crates/use-feature",
    "crates/use-annotation",
    "crates/use-motif",
    "crates/use-alignment",
    "crates/use-sequence-id",
]
resolver = "3"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/RustUse/use-bioinformatics"
rust-version = "1.95.0"
version = "0.1.0"

[workspace.dependencies]
use-alignment = { version = "0.1.0", path = "crates/use-alignment" }
use-alphabet = { version = "0.1.0", path = "crates/use-alphabet" }
use-amino-acid = { version = "0.1.0", path = "crates/use-amino-acid" }
use-annotation = { version = "0.1.0", path = "crates/use-annotation" }
use-bioinformatics = { version = "0.1.0", path = "crates/use-bioinformatics" }
use-feature = { version = "0.1.0", path = "crates/use-feature" }
use-genomic-range = { version = "0.1.0", path = "crates/use-genomic-range" }
use-motif = { version = "0.1.0", path = "crates/use-motif" }
use-nucleotide = { version = "0.1.0", path = "crates/use-nucleotide" }
use-residue = { version = "0.1.0", path = "crates/use-residue" }
use-sequence = { version = "0.1.0", path = "crates/use-sequence" }
use-sequence-id = { version = "0.1.0", path = "crates/use-sequence-id" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
    "use-sequence",
    "use-residue",
    "use-alphabet",
    "use-nucleotide",
    "use-amino-acid",
    "use-genomic-range",
    "use-annotation",
    "use-alignment",
    "use-sequence-id",
    "use-feature",
    "use-motif",
    "use-bioinformatics",
]
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
