[package]
name = "use-feature"
description = "Primitive sequence and genomic feature vocabulary for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-feature"
keywords = ["feature", "genomic", "sequence", "biology", "rustuse"]
categories = ["data-structures", "science"]

[dependencies]
use-annotation.workspace = true
use-genomic-range.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true